# Beyond-NeRF

./: .gitignore  README.md
Integrate_IMU/: CMakeLists.txt  IMU_Integrate.cpp
anaisgtsamstuff/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
archived/dust3r/: package.xml
archived/floor_detector/: CMakeLists.txt  main.cpp
archived/graph_edge_manager/: CMakeLists.txt  package.xml
archived/imu_integration/: CMakeLists.txt  package.xml
archived/navsat_bias/: main.cpp  package.xml
archived/odom_visualizer/: CMakeLists.txt  edge2odom.py  package.xml
archived/stereo_rescaler/: main.cpp
bnerf_msgs/: CMakeLists.txt  package.xml
bnerf_msgs/msg/: DUSt3RInfo.msg  DUSt3RInput.msg  DUSt3ROutput.msg  FloorCoeffs.msg  FloorDetection.msg  FloorDetectionInfo.msg  GraphBetweenFactor.msg  GraphBinaryEdge.msg  GraphEdgeCollection.msg  GraphIterationStatus.msg  GraphPriorFactor.msg  GraphUnaryEdge.msg  Log.msg  ScanMatchingFactor.msg  ScanMatchingInfo.msg  ScanMatchingIteration.msg  ScanMatchingStatus.msg  VoxelGridFilterInfo.msg  VoxelizationInfo.msg  VoxelizationStatus.msg
bnerf_msgs/srv/: FloorDetection.srv  IntegrateIMU.srv  LoadDUSt3R.srv  PredictDUSt3R.srv  Registration.srv
bnerf_utils/: CMakeLists.txt  package.xml
bnerf_utils/cmake/: utils-extras.cmake
bnerf_utils/include/bnerf_utils/: bnerf_utils.h  conversions.h  typedef.h
bnerf_utils/include/bnerf_utils/logging/: dstream.h  logger.h  signal_button.h
bnerf_utils/include/bnerf_utils/ros/: client.hpp  cloud_publisher.h  publisher.hpp  transform_caster.h
bnerf_utils/src/: cloud_publisher.cpp  conversion.cpp  logger.cpp  signal_button.cpp  transform_caster.cpp
dataset/dataset_replayer/: CMakeLists.txt  package.xml
dataset/dataset_replayer/launch/: kitti.launch
dataset/dataset_replayer/rviz/: kitti.rviz
dataset/kitti/kitti2bag/: CMakeLists.txt  main.py  package.xml  setup.py
dataset/kitti/kitti2bag/lib/: __init__.py  kitti2bag.py
dataset/kitti2bag/: CMakeLists.txt  main.py
dataset/pykitti/: CMakeLists.txt  package.xml
dust3r/: CMakeLists.txt  dust3r_server.py  main.py  package.xml  test.cpp  test.py
dust3r/include/dust3r/: dust3r_tester.h
dust3r/launch/: test_dust3r.launch  test_kitti.launch
dust3r/rviz/: kitti.rviz  test_dust3r.rviz
dust3r/src/: dust3r_tester.cpp
factor_graph_optimizer/: CMakeLists.txt  package.xml
factor_graph_optimizer/include/factor_graph_optimizer/: factor_graph_optimizer.h
factor_graph_optimizer/launch/: test_kitti.launch
factor_graph_optimizer/rviz/: kitti.rviz
factor_graph_optimizer/src/: factor_graph_optimizer.cpp
graph_visualizer/: package.xml
gtsam/graph_visualizer/: CMakeLists.txt  package.xml
imu_integration/: CMakeLists.txt  package.xml
lidar_slam/: CMakeLists.txt  package.xml
pcl_processing/: CMakeLists.txt  README.md  REQUIREMENTS  package.xml  test.py
pcl_processing/launch/: pcl_processing.launch  test_regist.launch
pcl_processing/rviz/: test_regist.rviz
pcl_processing/scripts/: pcl_alignment.py  pcl_server.py  test.py
pcl_processing/srv/: pcl_srv.srv
point_cloud_registration/optimizer/: CMakeLists.txt  main.cpp  package.xml
point_cloud_registration/optimizer/include/optimizer/: optimizer.h  state.h
point_cloud_registration/optimizer/launch/: test.launch
point_cloud_registration/optimizer/rviz/: test.rviz
point_cloud_registration/optimizer/src/: optimizer.cpp
point_cloud_registration/voxelizer/: CMakeLists.txt  package.xml
point_cloud_registration/voxelizer/include/voxelizer/: array.hpp  ndt_voxelizer.h  voxelizer.h
point_cloud_registration/voxelizer/src/: gicp_voxelizer.cpp
scan_filter/: CMakeLists.txt  main.cpp  package.xml
scan_filter/include/scan_filter/: scan_filter.h
scan_filter/launch/: test_kitti.launch
scan_filter/src/: scan_filter.cpp
scan_listener/: CMakeLists.txt
sensing/navsat_bias/: CMakeLists.txt  main.cpp  package.xml
sensing/navsat_bias/include/navsat_bias/: navsat_bias.h
sensing/navsat_bias/launch/: test_kitti.launch
sensing/navsat_bias/src/: navsat_bias.cpp
sensing/point_cloud_registration/dust3r_scale_finder/: CMakeLists.txt  main.cpp  package.xml
sensing/point_cloud_registration/dust3r_scale_finder/include/dust3r_scale_finder/: dust3r_scale_finder.h  floor.h  floor_detector.h
sensing/point_cloud_registration/dust3r_scale_finder/launch/: test_kitti.launch
sensing/point_cloud_registration/dust3r_scale_finder/src/: dust3r_scale_finder.cpp  floor_detector.cpp
sensing/point_cloud_registration/scan_matcher/: CMakeLists.txt  main.cpp  package.xml
sensing/point_cloud_registration/scan_matcher/cfg/: gicp.yaml  ndt.yaml
sensing/point_cloud_registration/scan_matcher/include/scan_matcher/: data.h  optim_data.h  optimizer.h  scan_matcher.h  state.h
sensing/point_cloud_registration/scan_matcher/launch/: test_kitti.launch
sensing/point_cloud_registration/scan_matcher/rviz/: kitti.rviz
sensing/point_cloud_registration/scan_matcher/src/: data.cpp  optim_data.cpp  optimizer.cpp  scan_matcher.cpp  state.cpp
sensing/point_cloud_registration/stereo_rescaler/: CMakeLists.txt  package.xml
sensing/point_cloud_registration/stereo_rescaler/include/stereo_rescaler/: stereo_rescaler.h
sensing/point_cloud_registration/stereo_rescaler/launch/: test_kitti.launch
sensing/point_cloud_registration/stereo_rescaler/src/: stereo_rescaler.cpp
sensing/prior_factor_manager/: CMakeLists.txt  main.cpp  package.xml
sensing/prior_factor_manager/include/prior_factor_manager/: prior_factor_manager.h
sensing/prior_factor_manager/launch/: test_kitti.launch
sensing/prior_factor_manager/src/: prior_factor_manager.cpp
sensing/transform_finder/: CMakeLists.txt  package.xml
sensing/transform_finder/include/transform_finder/: transform_finder.h
sensing/transform_finder/src/: transform_finder.cpp
voxel_grid_filter/: CMakeLists.txt  main.cpp  package.xml
voxel_grid_filter/include/voxel_grid_filter/: voxel_grid_filter.h
voxel_grid_filter/launch/: test_kitti.launch
voxel_grid_filter/rviz/: test_kitti.rviz
voxel_grid_filter/src/: voxel_grid_filter.cpp
(+117 files in other folders)
