<?xml version="1.0"?>
<package format="2">
    <name>bnerf_utils</name>
    <version>0.0.0</version>
    <description>utils</description>
    <maintainer email="bardiche4768@todo.todo">bardiche4768</maintainer>

    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>
    <build_export_depend>roscpp</build_export_depend>

    <build_depend>rospy</build_depend>
    <exec_depend>rospy</exec_depend>
    <build_export_depend>rospy</build_export_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <build_export_depend>sensor_msgs</build_export_depend>

    <build_depend>pcl_ros</build_depend>
    <exec_depend>pcl_ros</exec_depend>
    <build_export_depend>pcl_ros</build_export_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <build_export_depend>geometry_msgs</build_export_depend>

    <build_depend>eigen_conversions</build_depend>
    <exec_depend>eigen_conversions</exec_depend>
    <build_export_depend>eigen_conversions</build_export_depend>

    <build_depend>tf2_ros</build_depend>
    <exec_depend>tf2_ros</exec_depend>
    <build_export_depend>tf2_ros</build_export_depend>

	  <build_depend>bnerf_msgs</build_depend>
    <exec_depend>bnerf_msgs</exec_depend>
    <build_export_depend>bnerf_msgs</build_export_depend>

    <build_depend>visualization_msgs</build_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <build_export_depend>visualization_msgs</build_export_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
      <!-- Other tools can request additional information be placed here -->

    </export>
</package>
