<?xml version="1.0"?>
<package format="2">
  <name>dust3r</name>
  <version>0.0.0</version>
  <description>The dust3r package</description>
  <maintainer email="bardiche4768@todo.todo">bardiche4768</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bnerf_utils</build_depend>
  <exec_depend>bnerf_utils</exec_depend>
  <build_export_depend>bnerf_utils</build_export_depend>

  <build_depend>bnerf_msgs</build_depend>
  <exec_depend>bnerf_msgs</exec_depend>
  <build_export_depend>bnerf_msgs</build_export_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
