<?xml version="1.0"?>
<package format="2">
  <name>scan_filter</name>
  <version>0.0.0</version>
  <description>The scan_filter package</description>
  <maintainer email="bardiche4768@todo.todo">bardiche4768</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_export_depend>roscpp</build_export_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>
  <build_export_depend>pcl_ros</build_export_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
