<?xml version="1.0"?>
<package format="2">
  <name>voxel_grid_filter</name>
  <version>0.0.0</version>
  <description>The voxel_grid_filter package</description>
  <maintainer email="bardiche4768@todo.todo">bardiche4768</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>glog_ros</build_depend>
  <exec_depend>glog_ros</exec_depend>
  <build_export_depend>glog_ros</build_export_depend>

  <build_depend>bnerf_msgs</build_depend>
  <exec_depend>bnerf_msgs</exec_depend>
  <build_export_depend>bnerf_msgs</build_export_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

