<?xml version="1.0"?>
<package format="2">
    <name>kitti2bag</name>
    <version>0.0.0</version>
    <description>The kitti2bag package</description>
    <maintainer email="your@email.here">Your Name</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>rospy</exec_depend>
    <export>
    </export>
</package>
